--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
-    "date-fns": "^3.3.1"
+    "date-fns": "^3.3.1",
+    "jquery": "^3.7.1"
   }
 }
